conductor/test_logs/check_prod_utf8.txt
python : System check 
identified some issues:
At line:1 char:84
+ ... gs.production'; 
python manage.py check 
--deploy > check_prod.txt 
2>&1
+                     ~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (S  
  ystem check identifie   
 d some issues::String    
) [], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 

WARNINGS:
?: (drf_spectacular.W001) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\co
urses\serializers.py: 
Warning [CourseViewSet > 
CourseDetailSerializer > 
CategorySerializer]: 
unable to resolve type 
hint for function 
"get_course_count". 
Consider using a type 
hint or 
@extend_schema_field. 
Defaulting to string.
?: (drf_spectacular.W001) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\co
urses\serializers.py: 
Warning [CourseViewSet > 
CourseDetailSerializer > 
CategorySerializer]: 
unable to resolve type 
hint for function 
"get_subcategories". 
Consider using a type 
hint or 
@extend_schema_field. 
Defaulting to string.
?: (drf_spectacular.W001) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\co
urses\serializers.py: 
Warning [CourseViewSet > 
CourseDetailSerializer]: 
unable to resolve type 
hint for function 
"get_is_enrolled". 
Consider using a type 
hint or 
@extend_schema_field. 
Defaulting to string.
?: (drf_spectacular.W001) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\co
urses\serializers.py: 
Warning [CourseViewSet > 
CourseDetailSerializer]: 
unable to resolve type 
hint for function 
"get_user_progress". 
Consider using a type 
hint or 
@extend_schema_field. 
Defaulting to string.
?: (drf_spectacular.W001) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\no
tifications\views.py: 
Warning 
[NotificationListView]: 
Failed to obtain model 
through view's queryset 
due to raised exception. 
Prevent this either by 
setting "queryset = 
Model.objects.none()" on 
the view, checking for 
"getattr(self, 
"swagger_fake_view", 
False)" in get_queryset() 
or by simply using 
@extend_schema. 
(Exception: 
['ôAnonymousUserö is not 
a valid UUID.'])
?: (drf_spectacular.W001) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\pa
yments\views.py: Warning 
[PaymentHistoryView]: 
Failed to obtain model 
through view's queryset 
due to raised exception. 
Prevent this either by 
setting "queryset = 
Model.objects.none()" on 
the view, checking for 
"getattr(self, 
"swagger_fake_view", 
False)" in get_queryset() 
or by simply using 
@extend_schema. 
(Exception: 
['ôAnonymousUserö is not 
a valid UUID.'])
?: (drf_spectacular.W002) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\ga
mification\views.py: 
Error 
[GamificationStatsView]: 
exception raised while 
getting serializer. Hint: 
Is get_serializer_class() 
returning None or is 
get_queryset() not 
working without a 
request? Ignoring the 
view for now. (Exception: 
'GamificationStatsView' 
should either include a 
`serializer_class` 
attribute, or override 
the 
`get_serializer_class()` 
method.)
?: (drf_spectacular.W002) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\ga
mification\views.py: 
Error [LeaderboardView]: 
exception raised while 
getting serializer. Hint: 
Is get_serializer_class() 
returning None or is 
get_queryset() not 
working without a 
request? Ignoring the 
view for now. (Exception: 
'LeaderboardView' should 
either include a 
`serializer_class` 
attribute, or override 
the 
`get_serializer_class()` 
method.)
?: (drf_spectacular.W002) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\no
tifications\views.py: 
Error [MarkReadView]: 
exception raised while 
getting serializer. Hint: 
Is get_serializer_class() 
returning None or is 
get_queryset() not 
working without a 
request? Ignoring the 
view for now. (Exception: 
'MarkReadView' should 
either include a 
`serializer_class` 
attribute, or override 
the 
`get_serializer_class()` 
method.)
?: (drf_spectacular.W002) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\no
tifications\views.py: 
Error 
[RegisterDeviceView]: 
exception raised while 
getting serializer. Hint: 
Is get_serializer_class() 
returning None or is 
get_queryset() not 
working without a 
request? Ignoring the 
view for now. (Exception: 
'RegisterDeviceView' 
should either include a 
`serializer_class` 
attribute, or override 
the 
`get_serializer_class()` 
method.)
?: (drf_spectacular.W002) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\pa
yments\views.py: Error 
[ApplyCouponView]: 
exception raised while 
getting serializer. Hint: 
Is get_serializer_class() 
returning None or is 
get_queryset() not 
working without a 
request? Ignoring the 
view for now. (Exception: 
'ApplyCouponView' should 
either include a 
`serializer_class` 
attribute, or override 
the 
`get_serializer_class()` 
method.)
?: (drf_spectacular.W002) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\pa
yments\views.py: Error 
[CreateOrderView]: 
exception raised while 
getting serializer. Hint: 
Is get_serializer_class() 
returning None or is 
get_queryset() not 
working without a 
request? Ignoring the 
view for now. (Exception: 
'CreateOrderView' should 
either include a 
`serializer_class` 
attribute, or override 
the 
`get_serializer_class()` 
method.)
?: (drf_spectacular.W002) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\pa
yments\views.py: Error 
[VerifyPaymentView]: 
exception raised while 
getting serializer. Hint: 
Is get_serializer_class() 
returning None or is 
get_queryset() not 
working without a 
request? Ignoring the 
view for now. (Exception: 
'VerifyPaymentView' 
should either include a 
`serializer_class` 
attribute, or override 
the 
`get_serializer_class()` 
method.)
?: (drf_spectacular.W002) 
C:\Users\shiva\Desktop\win
dows_app\conductor\apps\us
ers\views.py: Error 
[LogoutView]: exception 
raised while getting 
serializer. Hint: Is 
get_serializer_class() 
returning None or is 
get_queryset() not 
working without a 
request? Ignoring the 
view for now. (Exception: 
'LogoutView' should 
either include a 
`serializer_class` 
attribute, or override 
the 
`get_serializer_class()` 
method.)
?: (security.W009) Your 
SECRET_KEY has less than 
50 characters, less than 
5 unique characters, or 
it's prefixed with 
'django-insecure-' 
indicating that it was 
generated automatically 
by Django. Please 
generate a long and 
random value, otherwise 
many of Django's 
security-critical 
features will be 
vulnerable to attack.

System check identified 
15 issues (0 silenced).
